# shim

./: .gitignore  .pullapprove.yml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Gopkg.toml  Makefile.am  NEWS  OWNERS  README.md  autogen.sh  child.go  configure.ac  proxy.go  shim.go
.ci/: ci-build.sh  ci-go-static-checks.sh  ci-setup.sh  go-env.sh  run.sh  setup.sh
mock/: mock_proxy.go  protocol.go
src/: log.c  log.h  shim.c  shim.h  utils.c  utils.h
tests/: shim_test.go
